<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/activity_display_message"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <!-- toolbar -->
    <include layout="@layout/app_bar"
        android:id="@+id/my_toolbar5"/>

    <TextView
        android:text="@string/attribute1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView1" />

    <TextView
        android:text="@string/attribute2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2" />

    <TextView
        android:text="@string/attribute3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3" />

    <TextView
        android:text="@string/attribute4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView4" />

    <TextView
        android:text="@string/attribute5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView5" />


</LinearLayout>