<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/activity_display_message"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- toolbar -->
    <include layout="@layout/app_bar"
        android:id="@+id/my_toolbar2"/>

    <Button
        android:text="@string/profile"
        android:textSize="24.0sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:onClick="goToProfile"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_above="@+id/button3"/>

    <Button
        android:text="@string/hub_connect"
        android:textSize="24.0sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:onClick="goToHubConnect"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_centerInParent="true"/>

    <Button
        android:text="@string/hubs_nearby"
        android:textSize="24.0sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button4"
        android:onClick="goToHubsNearby"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_below="@+id/button3"/>

</RelativeLayout>